--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "robot on a table",
   "main": "player.js",
   "scripts": {
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/player.js",
     "test": "test"
   },
   "repository": {
@@ -18,5 +20,12 @@
   "homepage": "https://github.com/prabhuramkumar/Robot#readme",
   "dependencies": {
     "redux": "^4.0.4"
+  },
+  "devDependencies": {
+    "@babel/node": "^7.5.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.19.1",
+    "rimraf": "^2.6.3"
   }
 }
