--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/node": "^7.5.5",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "line-reader": "^0.4.0",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.3"
   }
