--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "robot on a table",
   "main": "player.js",
   "scripts": {
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./src/tests,./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && node dist/player.js",
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,13 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "jest": "^24.8.0",
     "line-reader": "^0.4.0",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.3"
