--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "robot on a table",
   "main": "player.js",
   "scripts": {
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./src/tests,./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/player.js",
+    "start": "babel-node player.js",
     "test": "jest"
   },
   "repository": {
@@ -27,6 +26,7 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-es2015": "^6.24.1",
     "jest": "^24.8.0",
     "line-reader": "^0.4.0",
