--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "robot",
   "version": "1.0.0",
-  "description": "robot on a table",
+  "description": "Robot on a table",
   "main": "player.js",
   "scripts": {
     "start": "babel-node player.js",
@@ -25,9 +25,7 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "babel-cli": "^6.26.0",
     "babel-jest": "^24.8.0",
-    "babel-preset-es2015": "^6.24.1",
     "jest": "^24.8.0",
     "line-reader": "^0.4.0",
     "nodemon": "^1.19.1",
