--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "player.js",
   "scripts": {
     "start": "babel-node player.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
